# btc_mn_copula

./: .env.example  .gitignore  README.md  backtest.py  main.py  pyproject.toml  read_pdf_details.py  read_pdf_selection.py
backtest_results/: equity.csv  trades.csv
backtest_results/tearsheet/: report.html
data/: market_data.db
docs/: BINANCE_API_VERIFICATION.md  PARAMETER_COMPARISON.md  POSITION_DETECTION_DEBUG.md  SIGNAL_VERIFICATION.md
specs/: instructions.md
src/: __init__.py  binance_client.py  config.py  copula_model.py  formation.py  logger.py  state_manager.py  strategy.py  telegram_notifier.py  trading.py
src/backtesting/: binance_vision_loader.py  data_manager.py  data_quality.py  engine.py  stats.py
tests/: README.md  __init__.py  reproduce_double_entry.py  reproduce_inconsistent_state.py  reproduce_leftovers.py  reproduce_reentry.py  test_api_timeout.py  test_balance_check.py  test_binance_integration.py  test_config.py  test_cooldown.py  test_copula_model.py  test_data_alignment.py  test_inconsistent_hold.py  test_position_detection.py  test_rollback.py  test_signal_logic_fix.py  test_startup_sync.py  test_state_manager.py  test_state_persistence.py  test_strategy.py  test_telegram_notifications.py
tests/integration/: test_formation_public.py
